Correct strange behavior in dropdown overflow. Foundation row have overflow hidden but dropdown need overflow.

--- a/plonetheme/trantor/static/theme.css
+++ b/plonetheme/trantor/static/theme.css
@@ -38,3 +38,6 @@ html, body {
     padding-right: 0;
     height: 80px;
 }
+#nav-row {
+	overflow: visible;
+}
